remove ddr and pickup separated by team

--- a/autoexec_server.cfg
+++ b/autoexec_server.cfg
@@ -33,13 +33,13 @@ sv_rcon_mod_password ""
 sv_rcon_helper_password ""
 
 # Map to start server with
-sv_map "Sunny Side Up"
+sv_map "ctf5"
 
 # Whether this is a test server and rcon cheats are allowed. Also indicated in
 # the server type, which is:
 # - "DDraceNetwork" for 0 (no cheats) and
 # - "TestDDraceNetwo" for 1 (cheats)
-sv_test_cmds 1
+sv_test_cmds 0
 
 # Register server (make it public)
 sv_register 0
